# mc_load_compute

./: CMakeLists.txt  README.md  launch_mc_oneT.py  run_mc_load_and_compute.cpp
checkObservables/: checkL.py  checkU.py  checky0.py  checky1.py  checkz0.py
data2Json/: L_data2json.py  U_data2json.py  dist_data2json.py  y0_data2json.py  y1_data2json.py  z0_data2json.py
inputData/quadratic/: quadraticCoeffs.txt
mc_subroutine/: mc_load_and_compute.cpp  mc_load_and_compute.hpp
oneTCheckObservables/: checkLOneT.py  checkUOneT.py  checky0OneT.py  checky1OneT.py  checkz0OneT.py
physicalQuantity/: thermalExpansion.py
plt/: json2plt.py
plt/quadratic/row0/: json2plt.py
